# holdinvoice

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  coffee.yml  pyproject.toml
.github/workflows/: ci.yml
proto/: hold.proto  primitives.proto
src/: config.rs  errors.rs  hold.rs  hooks.rs  main.rs  model.rs  pb.rs  rpc.rs  server.rs  tasks.rs  tls.rs  util.rs
tests/: grpc_holdinvoicetest.py  grpc_stresstest.py  requirements.txt  rpc_holdinvoicetest.py  setup.sh  stresstest.py  stresstest_autoclean.py  test_holdinvoice_grpc.py  test_holdinvoice_rpc.py  test_stresstest.py  util.py
