[package]
edition = "2021"
name = "holdinvoice"
version = "3.1.0"

[dependencies]
anyhow = "1.0"
log = "0.4"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
# rand = "0.8"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }

cln-rpc = "0.2"
# cln-rpc = { path="../lightning/cln-rpc/", version = "^0.1" }
cln-plugin = "0.2"
# cln-plugin = { path="../lightning/plugins/", version = "^0.1" }

hex = "0.4"
bitcoin = { version = "0.30", features = [ "serde" ] }

[dependencies.tokio]
features = ["fs","net", "rt-multi-thread"]
version = "1"

[dependencies.tonic]
features = ["tls", "transport"]
version = "0.11"

[build-dependencies]
tonic-build = "0.11"

[profile.optimized]
inherits = "release"
strip = true
codegen-units = 1
lto = "fat"
debug = false